--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
   <header>
     <h1>SoftBarber</h1>
     <nav>
+      <!-- actualizado: agrego Cortes al menú -->
       <button id="nav-login">Login</button>
       <button id="nav-reservas">Reservas</button>
+      <button id="nav-cortes">Cortes</button>
       <button id="nav-admin">Admin</button>
       <button id="nav-logout" class="danger">Salir</button>
     </nav>
@@ -38,7 +40,7 @@
       </div>
     </section>
 
-    <!-- RESERVAS -->
+    <!-- RESERVAS (actualizado: barber y hora separados) -->
     <section id="reservas-view" class="hidden">
       <h2 class="panel-title">Reservas</h2>
       <div class="grid grid-3">
@@ -47,8 +49,16 @@
           <input id="res-nombre" type="text" />
         </div>
         <div>
+          <label>Barbero</label>
+          <input id="res-barbero" type="text" />
+        </div>
+        <div>
           <label>Fecha</label>
-          <input id="res-fecha" type="datetime-local" />
+          <input id="res-fecha" type="date" />
+        </div>
+        <div>
+          <label>Hora</label>
+          <input id="res-hora" type="time" />
         </div>
         <div>
           <label>Servicio</label>
@@ -69,12 +79,47 @@
           <tr>
             <th>Cliente</th>
             <th>Fecha</th>
-            <th>Servicio</th>
+            <th>Hora</th>
+            <th>Barbero</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody></tbody>
       </table>
+    </section>
+
+    <!-- NUEVO: CORTES -->
+    <section id="cortes-view" class="hidden">
+      <h2 class="panel-title">Registrar Corte</h2>
+      <div class="grid grid-3">
+        <div>
+          <label>Cliente</label>
+          <input id="cut-cliente" type="text" />
+        </div>
+        <div>
+          <label>Barbero</label>
+          <input id="cut-barbero" type="text" />
+        </div>
+        <div>
+          <label>Precio</label>
+          <input id="cut-precio" type="number" step="0.01" />
+        </div>
+        <div>
+          <label>Pago</label>
+          <select id="cut-pago">
+            <option value="efectivo">Efectivo</option>
+            <option value="transferencia">Transferencia</option>
+          </select>
+        </div>
+        <div>
+          <label>Descripción</label>
+          <input id="cut-desc" type="text" />
+        </div>
+      </div>
+      <div style="margin-top:12px">
+        <button class="primary" id="btn-registrar-cut">Registrar corte</button>
+        <span id="cut-status" style="margin-left:10px;color:#94a3b8"></span>
+      </div>
     </section>
 
     <!-- ADMIN -->
